# cio

./: CMakeLists.txt  Cargo.toml  README.md
examples/rust-echo-server/: Cargo.toml
examples/rust-echo-server/src/: main.rs
libcio-sys/: Cargo.toml  build.rs  wrapper.h
src/: CMakeLists.txt  cio-event.h  cio-stream.c  cio-stream.h  cio.c  cio.h  lib.rs  stream.c  stream.h
tests/: CMakeLists.txt  test-cio.c  test-tcp-stream.c  test-unix-stream.c  test_cio.c  test_tcp_stream.c  test_unix_stream.c
